# IDJ_GodHeim

./: README.md  compile.sh  install_sdl2.sh  run_godheim.sh
IDJ/: .cproject  .gitignore  .project  CMakeLists.txt  IDJ  NewData.txt  README.txt  SavedData.txt  saveData.txt
IDJ/Tiled/: FloatingBlock1.tmx  primeira fase.tmx  segunda fase(updated).tmx  segunda fase.tmx  temp.tmx
IDJ/Tiled/parser/: parser  parser.txt  primeirafase.lua  segundafase.lua
IDJ/img/characters/: bode comendo.xcf  dragon.xcf  dragonResting.xcf  eagleFlight.xcf  goatDeath.xcf  thor_walk.xcf  wolfHeld.xcf  wolfrun.xcf
IDJ/img/characters/Unused/: voodaaguianimado.psd
IDJ/img/level1/: rocks.xcf
IDJ/img/level1/level1/Unused/: firstLevelMap (1).tmx  stairsBig.xcf
IDJ/img/level2/: 2fase.tmx
IDJ/img/objects/: button.xcf  rope.xcf
IDJ/img/unclassified/tiled/: montandoprimeirafasecompleta.tmx
IDJ/map/: firstLevel.txt  firstLevelMap.txt  firstLevelMovementMap.txt  level1.txt  level1MovementMap.txt  level2.txt  level2MovementMap.txt
IDJ/map/firstLevel/: firstLayer.txt
IDJ/src/: Engine.h  Main.cpp  main.cpp
IDJ/src/cpp/: Bullet.cpp  Camera.cpp  Game.cpp  GameBase.cpp  InputManager.cpp  Point.cpp  Rect.cpp  Sound.cpp  Sprite.cpp  State.cpp  StillAnimation.cpp  Text.cpp  main.cpp
IDJ/src/engine/cpp/: BlockTileSet.cpp  Camera.cpp  Game.cpp  InputManager.cpp  LineSegment.cpp  Main.cpp  MovementMap.cpp  MultiTileSet.cpp  Music.cpp  Point.cpp  Rect.cpp  Resource.cpp  Sound.cpp  Sprite.cpp  State.cpp  StillAnimation.cpp  Text.cpp  TileMap.cpp  TileSet.cpp  Timer.cpp
IDJ/src/engine/include/: BlockTileSet.h  Camera.h  Collision.h  Game.h  GameObject.h  InputManager.h  LineSegment.h  MovementMap.h  MultiTileSet.h  Music.h  Point.h  Rect.h  Resource.h  Sound.h  Sprite.h  State.h  StateData.h  StillAnimation.h  Text.h  TileMap.h  TileSet.h  Timer.h
IDJ/src/gameStates/cpp/: Level1State.cpp
IDJ/src/gameStates/include/: Level1State.h
IDJ/src/include/: Bullet.h  Collision.h  Game.h  GameBase.h  GameObject.h  InputManager.h  Music.h  Point.h  Rect.h  Resource.h  Sound.h  Sprite.h  StateData.h  StillAnimation.h  Text.h  TileMap.h  TileSet.h
IDJ/src/specificCode/: Barrier.cpp  Barrier.h
IDJ/src/specificCode/NPC/cpp/: Wolf.cpp
IDJ/src/specificCode/NPC/include/: ChainedDragon.h  Skeleton.h  Wolf.h
IDJ/src/specificCode/characters/cpp/: Barrier.cpp  Bullet.cpp  ChainedDragon.cpp  Character.cpp  ClimbMov.cpp  EagleMov.cpp  GateMov.cpp  Goat.cpp  HoldingWolf.cpp  HpBar.cpp  Loki.cpp  MovementState.cpp  RegularMov.cpp  Skeleton.cpp  Thor.cpp  Wolf.cpp
IDJ/src/specificCode/characters/include/: Barrier.h  Bullet.h  ChainedDragon.h  Character.h  ClimbMov.h  EagleMov.h  GateMov.h  Goat.h  HoldingWolf.h  HpBar.h  Loki.h  MovementState.h  RegularMov.h  Skeleton.h  Thor.h  Wolf.h
IDJ/src/specificCode/gameStates/cpp/: Credits.cpp  EndState.cpp  Level1State.cpp  Level2State.cpp  OptionsState.cpp  StateData.cpp  TitleState.cpp
IDJ/src/specificCode/gameStates/include/: Credits.h  EndState.h  Level1State.h  Level2State.h  OptionsState.h  StateData.h  TitleState.h
IDJ/src/specificCode/items/cpp/: Item.cpp  ItemFlags.cpp
IDJ/src/specificCode/items/include/: Item.h  ItemFlags.h
(+48 files in other folders)
